# vpn_bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
docs/: bot_commands.md
locale/: messages.pot
locale/en/LC_MESSAGES/: messages.mo  messages.po
locale/ru/LC_MESSAGES/: messages.mo  messages.po
pivpn_api/: .env.example  Dockerfile  auth.py  docker-compose.yml  pivpn_app.py  restart_vpn_app.sh  run_vpn_api.sh  shell_commands.py  stop_vpn_app.sh
pivpn_api/pipes/: pipe_eval.sh
src/: __init__.py  locales.py  logger.py  loop.py
src/aiogram_app/: admin_commands.py  aiogram_app.py  aiogram_message_interface.py  app.py  baisic_commands.py  login_commands.py  message_formatters.py  notifications.py  payment_commands.py  telegram_auth.py  user_commands.py
src/db/: crud.py  db_conn.py  promocode_functions.py  schemas.py
src/fastapi_app/: admin_routes.py  app.py  auth.py  fastapi_app.py  payment_routes.py  pivpn_wrapper.py  shemas.py  user_routes.py  uvicrorn_confgis.py  uvicrorn_configs.py
src/tasks/: scheduler.py  task_configs.py  test_apsh.py  test_task.py  user_tasks.py  util_tasks.py
src/utils/errors/: config_errors.py  db_errors.py  pivpn_errors.py
src/wg_easy_wrapper/: wg_wrapper.py
tests/: mock_globals.py
tests/fixtures/: mock_db.py  user_fixtures.py
tests/mock_data/: mock_db.py
tests/mock_data/mock_login/: login_inline_buttons.pkl  login_message.pkl
tests/test_aiogram/: test_admin_commands.py  test_help.py  test_login.py  test_user_commands.py
tests/test_fastapi/: __init__.py  test_user_routes.py
tests/test_pivpn_api/: test_pivpn_api_routes.py  test_pivpn_connect.py
tests/test_tasks/: test_billing_tasks.py
tests/test_wg_wrapper/: test_wg_wrapper.py
