[tool.poetry]
name = "vpn-bot"
version = "0.1.0"
description = ""
authors = ["WildElaeagnus <54314123+akorzunin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.86.0"
aiogram = "^2.23.1"
uvicorn = "^0.19.0"
python-dotenv = "^0.21.0"
tinydb = "^4.7.0"
APScheduler = "^3.9.1.post1"
pydantic = {extras = ["email"], version = "^1.10.2"}
tinydb-serialization = "^2.1.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^0.990"
black = "^22.10.0"
nest-asyncio = "^1.5.6"
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
