[tool.poetry]
name = "vpn-bot"
version = "0.1.0"
description = ""
authors = ["WildElaeagnus <54314123+akorzunin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.86.0"
aiogram = "2.24"
uvicorn = "^0.19.0"
python-dotenv = "^0.21.0"
tinydb = "^4.7.0"
APScheduler = "^3.9.1.post1"
pydantic = {extras = ["email"], version = "^1.10.2"}
tinydb-serialization = "^2.1.0"
types-requests = "^2.28.11.7"
Pillow = "^9.4.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^0.990"
black = "^22.10.0"
nest-asyncio = "^1.5.6"
ipykernel = "^6.17.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
dill = "^0.3.6"
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
